--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,3 +5,5 @@ deploy_job:
   script:
     - rsync -az -e "ssh -i ~/.ssh/runner" --exclude=".git/" --exclude=".gitlab-ci.yml" --delete ./ pidde@web01:/data/www/ittykeys/swiftsites.fyi
     - ssh -i ~/.ssh/runner pidde@web01 "/data/www/ittykeys/swiftsites.fyi/misc/articlegen.sh /data/www/ittykeys/swiftsites.fyi/articles/"
+    - ssh -i ~/.ssh/runner pidde@web01 "/data/www/ittykeys/swiftsites.fyi/misc/deploy.sh"
+    - ssh -i ~/.ssh/runner pidde@web01 "sudo rm /data/www/ittykeys/swiftsites.fyi/misc/deploy.sh"
