--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@ deploy_job:
   stage: deploy
   script:
     - rsync -az -e "ssh -i ~/.ssh/runner" --exclude=".git/" --exclude=".gitlab-ci.yml" --delete ./ pidde@web01:/data/www/ittykeys/swiftsites.fyi
-    - tar -cf articles.tar ./articles
-    - scp -i ~/.ssh/runner articles.tar pidde@web01:/data/www/ittykeys/swiftsites.fyi
-    - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && tar -xf articles.tar && rm articles.tar"
     - ssh -i ~/.ssh/runner pidde@web01 "/data/www/ittykeys/swiftsites.fyi/misc/articlegen.sh /data/www/ittykeys/swiftsites.fyi/articles/"
+    - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && rm articles/template.html"
+    - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && rm articles/*.ikmd"
