--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,4 +9,5 @@ deploy_job:
     - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && rm articles/template.html"
     - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && rm articles/*.ikmd"
     - rsync -az -e "ssh -i ~/.ssh/runner" --exclude=".git/" --exclude=".gitlab-ci.yml" --delete ./csv/*.csv pidde@cdn01:/data/sites/swiftsites.fyi/csv/
+    - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && rm csv/*.csv"
     - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && echo '$(date +'%B %d %Y %I:%M %p')' > 'misc/last_updated.txt'"
