Prevent indexes, added download links

--- a/.htaccess
+++ b/.htaccess
@@ -12,6 +12,7 @@ ErrorDocument 502 /html/errorpages/502.html
 ErrorDocument 503 /html/errorpages/503.html
 ErrorDocument 504 /html/errorpages/504.html
 Options +Includes
+Options -Indexes
 AddType text/html .html .txt .css
 AddOutputFilter INCLUDES .html .txt .css
 Header set X-XSS-Protection "1; mode=block"
