--- a/.htaccess
+++ b/.htaccess
@@ -31,8 +31,10 @@ RewriteRule ^links$ /html/pages/links.html [L]
 RewriteRule ^about$ /html/pages/about.html [L]
 RewriteRule ^contact$ /html/pages/contact.html [L]
 RewriteRule ^robots\.txt$ /misc/robots.txt [L]
+RewriteRule ^humans\.txt$ /misc/humans.txt [L]
 RewriteRule ^ads\.txt$ /misc/ads.txt [L]
 RewriteRule ^security\.txt$ /misc/security.txt [L]
+RewriteRule ^favicon\.ico$ /img/favicon.ico [L]
 RewriteRule ^google6eba66c33878e8bb.html$ /html/google6eba66c33878e8bb.html [L]
 
 <Files ~ "^.*\.([Hh][Tt][Aa])">
