--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,12 +3,18 @@ stages:
 deploy_job:
   stage: deploy
   script:
-    - rsync -az -e "ssh -i ~/.ssh/runner" --exclude=".git/" --exclude=".gitlab-ci.yml" --delete ./ pidde@web01:/data/www/ittykeys/swiftsites.fyi
-    - ssh -i ~/.ssh/runner pidde@web01 "/data/www/ittykeys/swiftsites.fyi/misc/articlegen.sh /data/www/ittykeys/swiftsites.fyi/articles/"
-    - ssh -i ~/.ssh/runner pidde@web01 "/data/www/ittykeys/swiftsites.fyi/misc/sitelistgen.sh /data/www/ittykeys/swiftsites.fyi/csv/"
-    - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && rm articles/template.html"
-    - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && rm articles/*.ikmd"
-    - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && rm README.md"
-    - rsync -az -e "ssh -i ~/.ssh/runner" --exclude=".git/" --exclude=".gitlab-ci.yml" --delete ./csv/*.csv pidde@cdn01:/data/sites/swiftsites.fyi/csv/
-    - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && rm csv/*.csv"
-    - ssh -i ~/.ssh/runner pidde@web01 "cd /data/www/ittykeys/swiftsites.fyi && echo '$(date +'%B %d %Y %I:%M %p')' > 'misc/last_updated.txt'"
+    - |
+      # Initial rsync to webserver excluding .git and .gitlab-ci.yml
+      rsync -az -e "ssh -i ~/.ssh/runner" --exclude=".git/" --exclude=".gitlab-ci.yml" --delete ./ $webserver:$wwwpath/swiftsites.fyi
+      # Generate articles and sitelist, and clean up unwanted files
+      ssh -i ~/.ssh/runner $webserver <<EOF
+        $wwwpath/swiftsites.fyi/misc/articlegen.sh $wwwpath/swiftsites.fyi/articles/
+        $wwwpath/swiftsites.fyi/misc/sitelistgen.sh $wwwpath/swiftsites.fyi/csv/
+        rm -f $wwwpath/swiftsites.fyi/articles/template.html
+        rm -f $wwwpath/swiftsites.fyi/articles/*.ikmd
+        rm -f $wwwpath/swiftsites.fyi/README.md
+        rm -f $wwwpath/swiftsites.fyi/LICENSE
+        echo "\$(date +'%B %d %Y %I:%M %p')" > $wwwpath/swiftsites.fyi/misc/last_updated.txt
+EOF
+      rsync -az -e "ssh -i ~/.ssh/runner" --exclude=".git/" --exclude=".gitlab-ci.yml" --delete ./csv/*.csv $cdnserver:$cdnpath/swiftsites.fyi/csv/
+      ssh -i ~/.ssh/runner $webserver "rm -f $wwwpath/swiftsites.fyi/csv/*.csv"
