--- a/.htaccess
+++ b/.htaccess
@@ -30,13 +30,13 @@ RewriteRule ^sitelists$ /html/pages/sitelists.html [L]
 RewriteRule ^links$ /html/pages/links.html [L]
 RewriteRule ^about$ /html/pages/about.html [L]
 RewriteRule ^contact$ /html/pages/contact.html [L]
+RewriteRule ^sitemap$ /html/pages/sitemap.html [L]
 RewriteRule ^robots\.txt$ /misc/robots.txt [L]
 RewriteRule ^humans\.txt$ /misc/humans.txt [L]
 RewriteRule ^ads\.txt$ /misc/ads.txt [L]
 RewriteRule ^security\.txt$ /misc/security.txt [L]
 RewriteRule ^favicon\.ico$ /img/favicon.ico [L]
 RewriteRule ^sitemap\.xml$ /xml/sitemap.xml [L]
-RewriteRule ^sitemap$ /xml/sitemap.xml [L]
 RewriteRule ^google6eba66c33878e8bb.html$ /html/google6eba66c33878e8bb.html [L]
 
 <Files ~ "^.*\.([Hh][Tt][Aa])">
